--- a/.github/workflows/cont-ci-10.yaml
+++ b/.github/workflows/cont-ci-10.yaml
@@ -1,4 +1,4 @@
-name: cont-ci-20
+name: cont-ci-10
 
 on:
   workflow_dispatch:
@@ -6,48 +6,36 @@ on:
       TagVersion:
         description: 'Tag version for Docker image'
         required: true
-        default: 'v1.2.0'
+        default: 'v1.1.0'
         type: string
-        
+
 jobs:
   build:
-    runs-on: ubuntu-latest   # Github-hosted
-
+    runs-on: ubuntu-latest
+    
     env:
       IMAGE_NAME: ${{ vars.ACR_NAME }}.azurecr.io/${{ vars.EDUUSERID }}/samplejava
 
     steps:
-          
       - name: Checkout repository
         uses: actions/checkout@v4
+        
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }}:${{ github.event.inputs.TagVersion }} .
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+      - name: Upload Docker image to Registry
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v1
         with:
           registry: ${{ vars.ACR_NAME }}.azurecr.io
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
-        uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
-        with:
-          images: ${{ vars.ACR_NAME }}.azurecr.io/${{ vars.EDUUSERID }}/samplejava
-
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:${{ github.event.inputs.TagVersion }}
-            ${{ env.IMAGE_NAME }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:cache
-          cache-to:   type=registry,ref=${{ env.IMAGE_NAME }}:cache,mode=max
+      - name: Push Docker image
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker tag  ${{ env.IMAGE_NAME }}:${{ github.event.inputs.TagVersion }} ${{ env.IMAGE_NAME }}:latest
+          docker push ${{ env.IMAGE_NAME }}:${{ github.event.inputs.TagVersion }}
+          docker push ${{ env.IMAGE_NAME }}:latest
+          
