--- a/.github/workflows/cont-ci-50.yml
+++ b/.github/workflows/cont-ci-50.yml
@@ -15,9 +15,9 @@ on:
 
 jobs:
   build:
-    # runs-on: ubuntu-latest   # Github-hosted
+    runs-on: ubuntu-latest   # Github-hosted
     # runs-on: self-hosted           # VM
-    runs-on: edu16-arc-runner-set  # AKS
+    # runs-on: edu16-arc-runner-set  # AKS
 
     env:
       IMAGE_NAME: ${{ vars.ACR_NAME }}.azurecr.io/${{ vars.EDUUSERID }}/samplejava
